# Aichatbot

./: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
backend/: .env.example  Dockerfile  README.md  migration-result.txt  pyproject.toml  pytest-admin-result.txt  verify_migrate.db
backend/alembic/: env.py
backend/alembic/versions/: 20260519_0001_create_users_table.py  20260520_0002_chat_and_sso_external_id.py  20260520_0003_admin_documents_and_index_jobs.py  20260527_0004_fix_document_timestamp_defaults.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  bootstrap.py  health.py  migrate.py  session.py
backend/app/models/: __init__.py  conversation.py  document.py  index_job.py  message.py  user.py
backend/app/repositories/: conversation_repository.py  document_repository.py  index_job_repository.py  message_repository.py  user_repository.py
backend/app/schemas/: admin_documents.py  admin_monitoring.py  admin_stats.py  admin_users.py  auth.py  chat.py  common.py
backend/app/services/: admin_document_service.py  admin_monitoring_service.py  admin_stats_service.py  auth_service.py  bedrock_service.py  category_detect.py  chat_service.py  conversation_service.py  dev_users.py  indexing_service.py  (+1 more)
backend/scripts/: run_admin_api_check.py  verify_admin_live.py  verify_db.py
backend/tests/: conftest.py  test_admin_documents.py  test_admin_monitoring.py  test_auth.py  test_chat.py  test_health.py
(+102 files in other folders)
