[project]
name = "ai-chatbot-api"
version = "0.1.0"
description = "Enterprise AI chatbot platform API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "bcrypt>=4.2.0",
  "python-jose[cryptography]>=3.3.0",
  "email-validator>=2.2.0",
  "aiosqlite>=0.20.0",
  "aioboto3>=13.0.0",
  "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]
"app/main.py" = ["B008"]
"app/models/**/*.py" = ["UP042", "F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
